<resources>
    <string name="app_name">ClinicaApp</string>

    <!-- Pantalla Principal -->
    <string name="directorio_noticias">Noticias</string>
    <string name="directorio_servicios">Servicios</string>
    <string name="directorio_medicos">Médicos</string>
    <string name="directorio_contacto">Contacto</string>

    <string name="login">Iniciar Sesión</string>
    <string name="signup">Registrarse</string>
    <string name="recuperar_contraseña">Recuperar contraseña</string>

    <string name="username">Usuario</string>
    <string name="password">Contraseña</string>

    <string name="repassword">¿Olvidaste tu contraseña?</string>

    <string name="nombreusuario">Nombre de Usuario:</string>
    <string name="numero_identificacion">Número de Cedula:</string>
    <string name="rol_usuario">Rol de Usuario:</string>

    <string name="numero_telefono">Telefono:</string>

    <string name="email">Correo electronico:</string>

    <string name="gender">Genero:</string>

    <string name="sign_up">Registrarse</string>

    <string name="male">Masculino</string>

    <string name="female">Femenino</string>

    <!-- Inicio Pacientes -->
    <string name="text_pacientes">Bienvenido Paciente,</string>
    <string name="programar_citas">Programar citas médicas</string>
    <string name="historial_citas">Historial de citas programadas</string>
    <string name="tratamientos">Tratamientos</string>
    <string name="historias_clinicas">Historias clínicas</string>

    <!-- Inicio Medicos -->
    <string name="text_medicos">Bienvenido Medico,</string>
    <string name="medicos_menu1">Pacientes</string>
    <string name="medicos_menu2">Citas Pendientes</string>
    <string name="medicos_menu3">Tratamientos Asignados</string>
    <string name="medicos_menu4">Historial Citas Completadas</string>

    <!-- Inicio Administrador -->
    <string name="text_admin">Bienvenido Administrador,</string>
    <string name="admin_menu1">Medicos y Usuarios</string>
    <string name="admin_menu2">Reportes de Citas Completadas</string>
    <string name="admin_menu3">Historial de Citas</string>
    <string name="admin_menu4">Control de Notificaciones</string>
    <string name="admin_gestion">Gestionar medicos y usuarios.</string>

    <!-- Programar citas medicas -->
    <string name="pc_texto_citas">Programar Cita Médica: </string>
    <string name="pc_nombre_paciente">Nombre y Apellido</string>
    <string name="pc_identificacion_paciente">Cedula de Identidad</string>
    <string name="pc_edad_paciente">Edad</string>
    <string name="pc_fecha_cita">Fecha de la cita.</string>
    <string name="pc_historias">Añadir Historia Médica.</string>
    <string name="pc_add">Añadir</string>
    <string name="pc_programar_cita">Programar Cita</string>


</resources>